improve the styling of login page, made it responsive, added placeholders, animate login button, add spring effect and scale effect, madde card more beautiful, add spinner when logging in

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,5 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap"
       rel="stylesheet"
     />
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
